--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
 <meta charset="UTF-8">
 <title>Difficulty System Converter</title>
 <link rel="stylesheet" href="style.css">
-<style>
-  body { font-family: Arial, sans-serif; margin: 30px; }
-  input, select, button { margin: 5px; padding: 5px; font-size: 1em; }
-  label { display: block; margin-top: 10px; }
-</style>
 </head>
 <body>
 
@@ -31,9 +26,8 @@
 <label for="valueInput">Value to Convert:</label>
 <input type="number" id="valueInput" step="any">
 
-<button id="convertBtn">Convert</button>
-
 <h2>Result: <span id="result">-</span></h2>
+<h2>Visual: <span id="visualResult">-</span></h2>
 
 <script src="converter.js"></script>
 </body>
