--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <option value="scheep">Scheep Extended</option>
 </select>
 
-<label for="valueInput">Value to Convert:</label>
-<input type="number" id="valueInput" step="any">
+<label for="valueInput">Value to Convert (number or visual):</label>
+<input type="text" id="valueInput" placeholder="Enter number or visual name">
 
 <h2>Result: <span id="result">-</span></h2>
 <h2>Visual: <span id="visualResult">-</span></h2>
