--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Difficulty System Converter</title>
+<title>Appel Difficulty System Converter</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Difficulty System Converter</h1>
+<h1>Appel Difficulty System Converter</h1>
 
 <label for="sourceSystem">Source System:</label>
 <select id="sourceSystem">
